# livesun-gestorfinanceiro

./: .env.example  .gitignore  COMISSOES.md  COMISSOES_IMPLEMENTATION.md  DEPLOY.md  Dockerfile  IMPLEMENTATION.md  PUBLICAR_GIT_RAILWAY_HOSTINGER.md  Procfile  QUICK_START.md  README.md  TECHNICAL.md  VERSAO_2026-02-20.txt  VERSION.txt  compilar_para_hostinger.bat  configurar_db.py  criar_banco.sql  criar_banco_hostinger.sql  deploy_hostinger.bat  deploy_hostinger.sh  docker-compose.yml  inicializar_db.py  iniciar.bat  iniciar.sh  initialize_db_hostinger.sql  list_endpoints.py  migrate_comissoes.py  migrate_tenant_isolation.py  migrate_user_login_scope.py  prompt_financeiro.txt  railway.json  requirements.txt  run.py  setup.cfg  setup_db.py
.github/workflows/: deploy.yml
config/: config.py
migrations/: 001_create_comissoes_tables.sql  002_fix_cross_tenant_fluxo_reference.sql
scripts/: inserir_plano_fluxo_padrao.py
src/: __init__.py  app.py  balancete_financeiro.py  tenant.py
src/models/: __init__.py
src/routes/: __init__.py  auth.py  comissoes.py  contas_banco.py  dashboard.py  entidades.py  fluxo.py  lancamentos.py  relatorios.py
src/services/: comissoes.py  fluxo_consolidado.py
src/static/css/: style.css
src/templates/: dashboard.html  layout.html  suporte.html
src/templates/auth/: add_user.html  login.html  perfil.html  register.html
src/templates/comissoes/: apurar.html  index.html  parametros.html  relatorio.html
src/utils/: __init__.py
tests/: test_tenant_isolation.py
venvold/: pyvenv.cfg
venvold/Scripts/: activate  activate.bat
(+23 files in other folders)
