# LiveSun Financeiro - Sistema de Gestão Financeira
# Configuração Python e Flask

[metadata]
name = livesun-financeiro
version = 1.0.0
author = LiveSun
description = Sistema integrado de gestão de cash flow financeiro

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Flask==3.0.0
    Flask-SQLAlchemy==3.1.1
    Flask-Login==0.6.3
    Flask-WTF==1.2.1
    WTForms==3.1.1
    PyMySQL==1.1.0
    SQLAlchemy==2.0.23
    python-dotenv==1.0.0
    cryptography==41.0.7
    email-validator==2.1.0
    Werkzeug==3.0.1
